scrips-kubernetes/deploy-pod-metadata.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pmacs-metadata-pod
  labels:
    app: pmacs-metadata
spec:
  containers:
    - name: pmacs-ms-metadata
      image: pmacshub/pmacs-ms-metadata-homo
      ports:
      - containerPort: 9090
        name: port-metadata
      volumeMounts:
      - name: tz-sp
        mountPath: /etc/localtime
  volumes:
    - name: tz-sp
      hostPath:
        path: /usr/share/zoneinfo/America/Sao_Paulo
