scrips-kubernetes/deploy-pod-upload.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pmacs-uploadfile-pod
  labels:
    app: pmacs-api
spec:
  containers:
    - name: pmacs-uploadfile
      image: pmacshub/pmacs-ms-uploadfile
      ports:
        - containerPort: 8080
          name: port-uploadfile
      volumeMounts:
      - name: tz-sp
        mountPath: /etc/localtime
  volumes:
    - name: tz-sp
      hostPath:
        path: /usr/share/zoneinfo/America/Sao_Paulo
