scrips-kubernetes/deployment-api-mobile.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-apimobile-svc
  labels:
    run: pmacs-apimobile
spec:
  ports:
    - port: 8087
      protocol: TCP
      targetPort: 8090
  selector:
    run: pmacs-apimobile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-apimobile
spec:
  selector:
    matchLabels:
      run: pmacs-apimobile
  replicas: 1
  template:
    metadata:
      labels:
        run: pmacs-apimobile
    spec:
      containers:
        - name: pmacs-api-mobile
          image: pmacshub/pmacs-api-mobile-homo
          ports:
            - containerPort: 8090
