scrips-kubernetes/deployment-pmacs-aplicativo-processamento-sincronizacao.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-aplicativo-sincronizacao-svc
  labels:
    run: pmacs-aplicativo-processamento-sincronizacao
spec:
  ports:
    - port: 8087
      protocol: TCP
      targetPort: 8090
  selector:
    run: pmacs-aplicativo-processamento-sincronizacao
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pmacs-aplicativo-processamento-sincronizacao
spec:
  selector:
    matchLabels:
      run: pmacs-aplicativo-processamento-sincronizacao
  replicas: 1
  template:
    metadata:
      labels:
        run: pmacs-aplicativo-processamento-sincronizacao
    spec:
      containers:
        - name: pmacs-aplicativo-processamento-sincronizacao
          image: pmacshub/pmacs-aplicativo-sincronizacao-homo
          ports:
            - containerPort: 8090
