scrips-kubernetes/deployment-pmacs-extrator-metadados.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-extrator-metadados-svc
  labels:
    run:  pmacs-extrator-metadados
spec:
  ports:
    - port: 8099
      protocol: TCP
      targetPort: 9096
  selector:
    run:  pmacs-extrator-metadados
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-extrator-metadados
spec:
  selector:
    matchLabels:
      run: pmacs-extrator-metadados
  replicas: 1
  template:
    metadata:
      labels:
        run: pmacs-extrator-metadados
    spec:
      containers:
        - name: pmacs-individuo
          image: pmacshub/pmacs-extrator-metadados-homo
          ports:
            - containerPort: 9096
