scrips-kubernetes/kafka-service-new.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kaf1
  labels:
    name: kafka
spec:
  ports:
  - port: 9092
    name: kafka-port
    protocol: TCP
  selector:
    app: kafka
    id: "0"
  type: LoadBalancer
