scrips-kubernetes/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaf1
spec:
  type: LoadBalancer
  externalIPs:
    - 172.31.25.198
  ports:
    - name: port-9092
      port: 9092
      protocol: TCP
  selector:
    app: kafka1
